--- a/manifest.json
+++ b/manifest.json
@@ -6,16 +6,29 @@
 
   "description": "Transform strings into Title Case, Proper Case, Start Case, Camel Case, Upper Case, and Lower Case. You have 2 ways to change text. Either by right clicking on the field and changing the case or by highlighting and only changing what you highlighted.",
 
+  "homepage_url": "https://www.hightekdesigns.com",
+
   "icons": {
     "32": "icons/dictionary-32.png",
       "64": "icons/dictionary-64.png"
   },
 
+  "background": {
+    "scripts": ["background.js", "titlecasechange.js"]
+  },
+
   "content_scripts": [
     {
-      "matches": ["*://*/*"],
-      "js": ["titlecase.js"]
+      "matches": ["<all_urls>"],
+      "js": ["library/jquery-1.12.4.min.js", "titlecase.js", "titlecasechange.js"]
     }
+  ],
+
+  "permissions": [
+    "activeTab",
+    "contextMenus",
+    "storage",
+    "<all_urls>"
   ]
 
 }
