--- a/manifest.json
+++ b/manifest.json
@@ -27,7 +27,8 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["titlecase.js", "titlecasechange.js"]
+      "js": ["titlecase.js", "titlecasechange.js"],
+      "run_at" : "document_start"
     }
   ],
 
