--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 
   "manifest_version": 2,
   "name": "TitleCase",
-  "version": "3.1.3",
+  "version": "3.1.4",
 
   "description": "Transform strings into Title Case, Proper Case, Start Case, Camel Case, Upper Case, and Lower Case. You have 2 ways to change text. Either by right clicking on the field and changing the case or by highlighting and only changing what you highlighted.",
 
@@ -31,6 +31,10 @@
       "run_at" : "document_start"
     }
   ],
+
+  "options_ui": {
+      "page": "options.html"
+  },
 
   "permissions": [
     "activeTab",
