--- a/manifest.json
+++ b/manifest.json
@@ -33,7 +33,9 @@
   ],
 
   "options_ui": {
-      "page": "options.html"
+      "page": "options.html",
+      "browser_style": true,
+      "open_in_tab": false
   },
 
   "permissions": [
